--- a/src/app/orbit-counts/orbit-counts.component.html
+++ b/src/app/orbit-counts/orbit-counts.component.html
@@ -1,6 +1,12 @@
 <h3>Satellite Count:</h3>
 <div class="counts">
-	<div>Total: <span class="counts-total">NaN</span></div>
-</div>
+	<div>Total: <span>{{satellites.length}}</span></div>
+	<div>Space Debris: <span>{{count('space debris')}}</span></div>
+	<div>Communication: <span>{{count('communication')}}</span></div>
+	<div>Probe: <span>{{count('probe')}}</span></div>
+	<div>Positioning: <span>{{count('positioning')}}</span></div>
+	<div>Space Station: <span>{{count('space station')}}</span></div>
+	<div>Telescope: <span>{{count('telescope')}}</span></div>
+ </div>
 
 <!-- TODO 4: add logic to count number of satellites displayed -->
