--- a/src/app/orbit-counts/orbit-counts.component.html
+++ b/src/app/orbit-counts/orbit-counts.component.html
@@ -1,12 +1,12 @@
 <h3>Satellite Count:</h3>
 <div class="counts">
 	<div>Total: <span>{{satellites.length}}</span></div>
-	<div>Space Debris: <span>{{count('space debris')}}</span></div>
-	<div>Communication: <span>{{count('communication')}}</span></div>
-	<div>Probe: <span>{{count('probe')}}</span></div>
-	<div>Positioning: <span>{{count('positioning')}}</span></div>
-	<div>Space Station: <span>{{count('space station')}}</span></div>
-	<div>Telescope: <span>{{count('telescope')}}</span></div>
+	<div>Space Debris: <span>{{count('Space Debris')}}</span></div>
+	<div>Communication: <span>{{count('Communication')}}</span></div>
+	<div>Probe: <span>{{count('Probe')}}</span></div>
+	<div>Positioning: <span>{{count("Positioning")}}</span></div>
+	<div>Space Station: <span>{{count("Space Station")}}</span></div>
+	<div>Telescope: <span>{{count("Telescope")}}</span></div>
  </div>
 
 <!-- TODO 4: add logic to count number of satellites displayed -->
