--- a/src/app/orbit-counts/orbit-counts.component.html
+++ b/src/app/orbit-counts/orbit-counts.component.html
@@ -10,3 +10,8 @@
 </div>
 
 <!-- TODO 4: add logic to count number of satellites displayed -->
+<h3>Satellite Counts (using ngFor):</h3>
+<div id="bonusDiv" class="counts">
+    <div class="header">Total: <span class="counts-total">{{satellites.length}}</span></div>
+    <div *ngFor="let type of types">{{type}}: <span>{{countByType(type)}}</span></div>
+</div>
